# Ancestral-inference-pipeline-2025

./: README.md
baseml-btw-change_counts-0.1.0/: 0.ctl.ini  INFO.ini  README.md  run.sh
baseml-btw-change_counts-0.1.0/alignment/: copy_sample_seqs_to_BTW_dir.py
baseml-btw-change_counts-0.1.0/btw/: run_BTW_pipeline.sh
baseml-btw-change_counts-0.1.0/sfs/: anc_prob_list_to_SFS.sh  anc_prob_list_to_joint_prob.py  count_mutations_by_AWP_method.py  output_AI_result_summary.py
baseml-btw-change_counts-0.1.0/utils/: make_filtering_ctl_file_from_pipeline_ctl.py  make_output_dirs.sh  make_template_control_file.py  zip_btw_codes_for_dev.sh
codonpaths-0.3.0/: __init__.py  path.py
p123/: README.md
p123/___step1__make_codon_configuration_data/: ___run_all_process_step1.sh  __readme.txt  make_ancestral_codon_configuration_with_prob_ver221215.pl  make_extant_codon_cofiguration_ver221215.pl
p123/___step2__estimate_syn_nonsyn_substituion_ratio/: ___run_all_process_step2.sh  __readme.txt  count_Dn_Ds.pl  make_joint_prob_anc_cod_config_list_only_with_single_or_no_change_per_path_ver221215.pl  make_joint_prob_anc_cod_config_list_wo_configuration_with_stop_codons_ver221215.pl  make_list_of_N_S_at_ms_and_ye_node.pl  make_list_of_codon_change_with_probability_S_N_for_fix_for_dNdS_calculation_ver221215.pl  make_list_of_codon_change_with_probability_for_dNdS_calculation_ver221215.pl
ppda-0.1.0/: .gitignore  0.ctl.ini  INFO.ini  README.md  run.sh
refjoin-0.1.0/: README.md  setup.cfg
refjoin-0.1.0/sample/: input_1.aln  input_2.aln  output.aln
(+98 files in other folders)
