[metadata]
name = refjoin
version = attr: refjoin.__version__
author = Kent Kawashima, Division of Evolutionary Genetics in NIG
description = refjoin: Combines two sequence alignments using a specified shared sequence. 
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires = numpy
